# transport_flow_model

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml
example/processed_data/od/: od.csv
example_data_template/: network_dataframe.csv  od_dataframe.csv
scripts/flow_model/: flow_allocation.py  flow_disruptions.py  flow_utils.py
src/transport_flow_model/: __init__.py  flow_utils.py
